# CMPE275-mini-1

phase-01/: CMakeLists.txt
phase-01/src/: CollisionRecord.cpp  CollisionRecord.h  DataParser.cpp  main.cpp  output
phase-02/: CMakeLists.txt
phase-02/src/: CollisionRecord.h  DataParser.cpp  DataParser.h  main.cpp
phase-03/: CMakeLists.txt
phase-03/src/: CollisionRecord.cpp  CollisionRecord.h  DataParser.cpp  DataParser.h  main.cpp
